[tool.poetry]
name = "SLAC"
version = "0.4.5"
description = "Slac Implementation For Insys Powerline Module"
authors = ["pokiledaa <parsaoski.po@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyzmq = "^23.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
